[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-jose_aws-kms-extension"
version = "1.0.0"
description = "AWS KMS extension for 'python-jose' library."

license = "Apache-2.0"

authors = [
    "Lynx Tech <lynx-tech@amazon.com>",
]

readme = ["README.md", "LICENSE"]

packages = [{include = "jose_aws_kms_extension"}]

[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.8,<4"
# Python JOSE
python-jose = {extras = ["cryptography"], version = "3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
black = "^23.3.0"

[tool.black]
line-length = 120

[tool.isort]
known_first_party = ["jose_aws_kms_extension"]

# required for compatibility with black:
profile = "black"

# To maintain consistency with other settings
line_length = 120

[tool.mypy]
# See https://mypy.readthedocs.io/en/latest/config_file.html for more mypy options.

# Enables the type-checker on the interior of functions without type annotations.
check_untyped_defs = true

# Displaying specific error codes makes it easier to silence specific errors
# See also https://mypy.readthedocs.io/en/latest/error_codes.html
show_error_codes = true

# Show source code snippets and location markers in error messages
pretty = true

# Suppresses errors about packages which do not implement type-hint sharing.
# See also https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports.
ignore_missing_imports = true
